# Simple-Console-UI-MP3-Player

./: CMakeLists.txt  README.md
src/: main.cpp  player.cpp  player.h  portaudio.lib
